--- a/app/src/main/res/layout-v28/activity_listcard.xml
+++ b/app/src/main/res/layout-v28/activity_listcard.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -98,7 +99,7 @@
                 android:layout_marginTop="@dimen/View4dp"
                 android:text="@string/Searching"
                 android:textColor="@color/text_gray"
-                android:textSize="12dp"
+                android:textSize="@dimen/Text12sp"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/anime2" />
@@ -107,12 +108,12 @@
                 android:id="@+id/textView9"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginLeft="20dp"
+                android:layout_marginStart="@dimen/View20dp"
                 android:layout_marginTop="@dimen/View8dp"
-                android:layout_marginRight="@dimen/View20dp"
+                android:layout_marginEnd="@dimen/View20dp"
                 android:gravity="center"
                 android:textColor="@color/text_gray"
-                android:textSize="14dp"
+                android:textSize="@dimen/Text14sp"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/textView8" />
