--- a/app/src/main/res/layout-v28/activity_main.xml
+++ b/app/src/main/res/layout-v28/activity_main.xml
@@ -97,7 +97,7 @@
                 android:id="@+id/textView9"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginLeft="20dp"
+                android:layout_marginLeft="@dimen/View20dp"
                 android:layout_marginTop="@dimen/View8dp"
                 android:layout_marginRight="@dimen/View20dp"
                 android:gravity="center"
@@ -118,7 +118,6 @@
         android:layout_centerHorizontal="true"
         android:orientation="horizontal"
         android:visibility="visible"
-
         app:layout_constraintBottom_toTopOf="@+id/ssssss"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent">
@@ -134,12 +133,6 @@
             app:icon="@drawable/ic_close2"
             app:iconSize="24dp"
             app:iconGravity="textStart"
-            android:padding="0dp"
-            app:iconPadding="0dp"
-            android:insetLeft="0dp"
-            android:insetTop="0dp"
-            android:insetRight="0dp"
-            android:insetBottom="0dp"
             android:backgroundTint="#FFFFFF"
             app:shapeAppearanceOverlay="@style/ShapeAppearanceOverlay.MyApp.Button.Circle" />
 
@@ -147,18 +140,12 @@
             android:id="@+id/star_button"
             android:layout_width="56dp"
             android:layout_height="56dp"
-            android:layout_marginRight="@dimen/View32dp"
+            android:layout_marginEnd="@dimen/View32dp"
             android:layout_marginBottom="@dimen/View8dp"
             app:iconTint="@null"
             app:icon="@drawable/ic_star"
             app:iconSize="24dp"
             app:iconGravity="textStart"
-            android:padding="0dp"
-            app:iconPadding="0dp"
-            android:insetLeft="0dp"
-            android:insetTop="0dp"
-            android:insetRight="0dp"
-            android:insetBottom="0dp"
             android:backgroundTint="#FFFFFF"
             app:shapeAppearanceOverlay="@style/ShapeAppearanceOverlay.MyApp.Button.Circle" />
 
@@ -166,18 +153,12 @@
             android:id="@+id/like_button"
             android:layout_width="56dp"
             android:layout_height="56dp"
-            android:layout_marginRight="@dimen/View32dp"
+            android:layout_marginEnd="@dimen/View32dp"
             android:layout_marginBottom="@dimen/View8dp"
             app:iconTint="@null"
             app:icon="@drawable/ic_heart"
             app:iconSize="24dp"
             app:iconGravity="textStart"
-            android:padding="0dp"
-            app:iconPadding="0dp"
-            android:insetLeft="0dp"
-            android:insetTop="0dp"
-            android:insetRight="0dp"
-            android:insetBottom="0dp"
             android:backgroundTint="#FFFFFF"
             app:shapeAppearanceOverlay="@style/ShapeAppearanceOverlay.MyApp.Button.Circle" />
     </LinearLayout>
