--- a/app/src/main/res/drawable/chat_1.xml
+++ b/app/src/main/res/drawable/chat_1.xml
@@ -1,10 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
+    <padding android:left="@dimen/View8dp" android:right="@dimen/View8dp" android:top="@dimen/View8dp" android:bottom="@dimen/View8dp"/>
     <solid
         android:color="@color/c2"/>
 
-    <corners android:bottomRightRadius="0dp" android:bottomLeftRadius="20dp"
-        android:topLeftRadius="20dp" android:topRightRadius="20dp"/>
+    <corners android:bottomRightRadius="24dp" android:bottomLeftRadius="24dp"
+        android:topLeftRadius="24dp" android:topRightRadius="24dp"/>
 
 </shape>
