--- a/app/src/main/res/layout-v28/activity_chat.xml
+++ b/app/src/main/res/layout-v28/activity_chat.xml
@@ -23,7 +23,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="right"
-            android:layout_marginStart="@dimen/View4dp"
+            android:layout_marginStart="@dimen/View16dp"
             android:src="@drawable/ic_arrow_back_black2_24dp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -33,7 +33,7 @@
             android:id="@+id/pre_Image_porfile"
             android:layout_width="45dp"
             android:layout_height="45dp"
-            android:layout_marginStart="@dimen/View8dp"
+            android:layout_marginStart="@dimen/View32dp"
             app:civ_border_color="#11000000"
             app:civ_border_width="2dp"
             app:layout_constraintBottom_toBottomOf="parent"
@@ -57,7 +57,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="right"
-            android:layout_marginEnd="@dimen/View8dp"
+            android:layout_marginEnd="@dimen/View16dp"
             android:src="@drawable/ic_more_vert_black_24dp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
@@ -81,7 +81,6 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_below="@+id/Linear_top_chat"
-
         app:stackFromEnd="true">
 
 
@@ -101,14 +100,14 @@
         android:gravity="center_horizontal"
         android:orientation="horizontal"
         android:background="@color/background_white">
-        <Button
+        <ImageView
             android:visibility="gone"
             android:id="@+id/menu_button"
             android:layout_gravity="center"
             android:layout_width="30dp"
             android:layout_height="30dp"
-            android:layout_marginRight="@dimen/View4dp"
-            android:background="@drawable/ic_apps_black_24dp"/>
+            android:layout_marginEnd="@dimen/View4dp"
+            android:src="@drawable/ic_baseline_keyboard_arrow_right_24"/>
 
 
         <ImageView
@@ -120,9 +119,6 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
-            android:layout_alignBottom="@+id/recyclerView_2"
-            android:layout_alignParentStart="true"
-
             android:background="@color/float_transparent"
             android:translationZ="4dp"
             android:gravity="center"
@@ -135,7 +131,8 @@
                 android:layout_width="30dp"
                 android:layout_height="30dp"
                 android:layout_weight="1"
-                android:layout_marginRight="@dimen/View4dp"
+                android:layout_marginEnd="@dimen/View4dp"
+
                 android:src= "@drawable/ic_image_chat"/>
 
             <ImageView
@@ -153,13 +150,14 @@
                 android:layout_gravity="center"
                 android:layout_marginRight="@dimen/View4dp"
                 android:src="@drawable/ic_mic_black_24dp" />
+
         </LinearLayout>
         <LinearLayout
             android:layout_marginEnd="@dimen/View4dp"
             android:layout_gravity="center"
             android:background="@drawable/rounded_real"
             android:padding="@dimen/View4dp"
-            android:layout_width="match_parent"
+            android:layout_width="0dp"
             android:layout_weight="1.5"
             android:layout_height="wrap_content">
 
@@ -181,13 +179,13 @@
             android:layout_width="wrap_content"
             android:layout_gravity="center"
             android:layout_height="wrap_content">
-            <Button
-
+            <TextView
                 android:id="@+id/send"
-                android:layout_width="22dp"
-                android:layout_height="20dp"
+                android:layout_width="30dp"
+                android:layout_height="30dp"
                 android:background="@drawable/chat_before" />
         </LinearLayout>
+
 
     </LinearLayout>
         <LinearLayout
