--- a/app/src/main/res/layout-v28/activity_item_image.xml
+++ b/app/src/main/res/layout-v28/activity_item_image.xml
@@ -9,48 +9,47 @@
         android:id="@+id/nav_linear"
         android:layout_alignParentTop="true"
         android:layout_width="match_parent"
-        android:layout_height="50dp"
+        android:layout_height="?attr/actionBarSize"
         android:background="@drawable/rounded">
-        <Button
+        <ImageView
             android:layout_gravity="center"
-            android:layout_width="35dp"
-            android:layout_height="35dp"
-            android:background="@drawable/back_forward"/>
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="@dimen/View16dp"
+            android:src="@drawable/ic_arrow_back_black2_24dp"/>
         <LinearLayout
             android:layout_width="wrap_content"
-            android:layout_height="45dp"
+            android:layout_height="match_parent"
+            android:layout_marginStart="@dimen/View32dp"
             android:layout_gravity="center"
             android:orientation="vertical">
             <TextView
                 android:id="@+id/name_sender_image"
-                android:layout_marginBottom="2dp"
-                android:layout_marginStart="@dimen/View8dp"
                 android:layout_gravity="bottom"
+                android:textColor="@color/text_black_gray"
                 android:textSize="@dimen/Text14sp"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:hint=""/>
+                />
             <TextView
                 android:layout_marginBottom="2dp"
                 android:id="@+id/image_date_front"
-                android:layout_marginStart="@dimen/View8dp"
-                android:gravity=""
                 android:textSize="@dimen/Text10sp"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:hint=""/>
+                />
         </LinearLayout>
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="50dp"
+            android:layout_height="match_parent"
             android:gravity="end">
-            <Button
-                android:layout_marginEnd="@dimen/View4dp"
+            <ImageView
+                android:layout_marginEnd="@dimen/View16dp"
                 android:layout_gravity="center"
-                android:background="@drawable/ic_apps_black_24dp"
+                android:src="@drawable/ic_dots_menu"
                 android:id="@+id/button_all_image"
-                android:layout_width="35dp"
-                android:layout_height="35dp" />
+                android:layout_width="@dimen/View24dp"
+                android:layout_height="@dimen/View24dp" />
         </LinearLayout>
     </LinearLayout>
 
@@ -104,7 +103,7 @@
             android:layout_height="wrap_content"
             android:gravity="center">
             <TextView
-                android:textColor="@color/c3"
+                android:textColor="@color/text_black_gray"
                 android:textStyle="bold"
                 android:id="@+id/count_image"
                 android:layout_width="wrap_content"
