--- a/app/src/main/res/layout-v28/activity_matches.xml
+++ b/app/src/main/res/layout-v28/activity_matches.xml
@@ -8,32 +8,34 @@
     tools:context=".Matches.MatchesActivity">
 
 
-        <androidx.core.widget.NestedScrollView
-            android:layout_width="match_parent"
-            android:layout_height="match_parent">
+    <androidx.core.widget.NestedScrollView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
+            android:orientation="vertical"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.5"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            android:orientation="vertical"
-            >
+            app:layout_constraintTop_toTopOf="parent">
+
             <LinearLayout
                 android:id="@+id/layoutRe"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:orientation="vertical"
-                >
+                android:orientation="vertical">
+
                 <TextView
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:padding="@dimen/View8dp"
-                    android:textSize="@dimen/Text20sp"
+                    android:text="@string/text_hi"
                     android:textColor="@color/c2"
-                    android:text="@string/text_hi"/>
+                    android:textSize="@dimen/Text20sp" />
+
                 <androidx.recyclerview.widget.RecyclerView
                     android:id="@+id/recyclerView2"
                     android:layout_width="match_parent"
@@ -41,29 +43,32 @@
                     android:padding="@dimen/View8dp"
 
                     />
+
                 <TextView
-                    android:visibility="gone"
                     android:id="@+id/textempty"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:gravity="center"
-                    android:textColor="@color/text_gray"
-                    android:text="@string/chatna_empty"
-                    android:textSize="@dimen/Text16sp"
                     android:padding="@dimen/View36dp"
-                    />
+                    android:text="@string/chatna_empty"
+                    android:textColor="@color/text_gray"
+                    android:textSize="@dimen/Text16sp"
+                    android:visibility="gone" />
             </LinearLayout>
+
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="vertical">
+
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:padding="@dimen/View8dp"
-                    android:textSize="@dimen/Text20sp"
+                    android:text="@string/yexy_message"
                     android:textColor="@color/c2"
-                    android:text="@string/yexy_message"/>
+                    android:textSize="@dimen/Text20sp" />
+
                 <androidx.recyclerview.widget.RecyclerView
                     android:id="@+id/recyclerView"
                     android:layout_width="match_parent"
@@ -73,23 +78,17 @@
                 </androidx.recyclerview.widget.RecyclerView>
 
                 <TextView
-                    android:visibility="gone"
                     android:id="@+id/chatempty"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:gravity="center"
+                    android:paddingTop="80dp"
                     android:text="@string/Chat_empty"
                     android:textColor="@color/text_gray"
                     android:textSize="@dimen/Text16sp"
-                    android:paddingTop="80dp"
-                    />
+                    android:visibility="gone" />
 
             </LinearLayout>
-
-
         </LinearLayout>
-        </androidx.core.widget.NestedScrollView>
-
-
-
+    </androidx.core.widget.NestedScrollView>
 </RelativeLayout>
