--- a/app/src/main/res/layout-v28/activity_regis_age.xml
+++ b/app/src/main/res/layout-v28/activity_regis_age.xml
@@ -48,7 +48,7 @@
 
             android:text="@string/your_age"
             android:textColor="@color/text_black_gray"
-            android:textSize="30dp" />
+            android:textSize="@dimen/Text24sp" />
 
         <DatePicker
             android:id="@+id/datePicker"
@@ -61,10 +61,12 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginLeft="@dimen/View32dp"
+            android:layout_marginRight="@dimen/View32dp"
             android:gravity="center"
             android:text="@string/note_age"
             android:textColor="@color/text_gray"
-            android:textSize="14dp" />
+            android:textSize="@dimen/Text14sp" />
 
         <Button
             android:id="@+id/button_name"
