--- a/app/src/main/res/layout/activity_band_user.xml
+++ b/app/src/main/res/layout/activity_band_user.xml
@@ -8,8 +8,8 @@
     android:orientation="vertical"
     tools:context=".BandUser">
     <ImageView
-        android:layout_width="60dp"
-        android:layout_height="60dp"
+        android:layout_width="80dp"
+        android:layout_height="80dp"
         android:src="@drawable/ic_banduser"
         android:layout_marginBottom="@dimen/View20dp"
         />
@@ -18,7 +18,7 @@
         android:layout_height="wrap_content"
         android:layout_marginRight="@dimen/View32dp"
         android:layout_marginLeft="@dimen/View32dp"
-        android:text="บีญชีของคุณถูกระงับการใช้งาน"
+        android:text="@string/blacklist"
         android:gravity="center"
         android:textColor="@color/red"
         android:textSize="@dimen/Text20sp"
@@ -26,14 +26,11 @@
     <Button
         android:id="@+id/button_back"
         android:layout_width="wrap_content"
-        android:layout_height="40dp"
+        android:layout_height="wrap_content"
         android:layout_marginBottom="@dimen/View8dp"
         android:layout_marginTop="40dp"
-        android:backgroundTint="@color/red"
-        android:background="@drawable/roundlike"
-        android:paddingLeft="@dimen/View20dp"
-        android:paddingRight="@dimen/View20dp"
         android:text="@string/back"
+        android:backgroundTint="@color/c1"
         android:textColor="@color/cpb_white"
         android:textSize="@dimen/Text16sp" />
 
