--- a/app/src/main/res/layout/item_matches.xml
+++ b/app/src/main/res/layout/item_matches.xml
@@ -16,7 +16,7 @@
         <RelativeLayout
             android:layout_width="76dp"
             android:layout_height="76dp"
-            android:layout_gravity="center_vertical">
+            android:layout_gravity="top">
             <ProgressBar
                 android:id="@+id/progress_image"
                 android:layout_width="wrap_content"
